Combined Header and Hero sections to align them.  Added fixed height to each section to make them the same height. Adjusted sizes of various within containers.

--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,34 @@ body {
     flex-direction: column;
 }
 
-/* Header CSS */
+/* Header and Hero Section CSS */
+.sec1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #1f2937;
+    padding: 20px 0 60px 0;
+}
+
+.sec1container{
+    color: #f9faf8;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 60%;
+    max-width: 1440px;
+    height: 370px;
+}
+
 .head {
     justify-content: space-between;
-    font-size: 24px;
-    color: #e5e7eb;
-    padding: 20px 30px;
-    background-color: #1f2937;
     display: flex;
+}
+
+#headerLogo {
+    font-size: 24px;
+    color: #f9faf8;
 }
 
 .navbar {
@@ -25,24 +45,19 @@ body {
     color: #e5e7eb;
 }
 
-/* Hero Section CSS */
-.sec1{
-    background-color: #1f2937;
-    color: #f9faf8;
-
+.hero {
     display: flex;
-    justify-content: center;
-    gap: 3em;
-    padding: 50px 70px 50px 70px;
+    justify-content: space-between;
+    width: 100%;
+    gap: 3rem;
 }
+
 
 .sec1left {
     display: flex;
     flex-direction: column;
     max-width: 500px;
     gap: 15px;
-    flex: 1;
-    margin-left: auto;
 }
 
 .awesome {
@@ -53,16 +68,16 @@ body {
 #heroimg {
     max-width: 500px;
     height: auto;
-    flex: 1;
-    margin-right: auto;
     opacity: 80%;
     border-radius: 25px;
 }
+
 
 /* Info Section CSS */
 .sec2 {
     text-align: center;
     margin: 50px;
+    height: 370px;
 }
 
 #sec2text {
@@ -96,6 +111,7 @@ body {
     color: #1f2937;
     display: flex;
     justify-content: center;
+    height: 370px;
     }
 
 .sec3text {
@@ -115,7 +131,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px 0;
+    height: 370px;
 }
 
 .sec4container {
@@ -123,11 +139,12 @@ body {
     border-radius: 7px;
 
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     color: #f9faf8;
-    width: 60em;
-    height: 7em;
+    width: 60%;
+    max-width: 1440px;
+    height: 50%;
 }
 
 .calltoaction {
